@@ -165,7 +165,7 @@ __read_from_iface() {
 	    wait
 	    rm -f "$pidfile"
 	} | {
-	    nc 127.0.0.1 1012
+	    busybox nc 127.0.0.1 1012
 	    read pid < "$pidfile" && kill "$pid" > /dev/null 2>&1
 	} | __read
     fi
