@@ -23,7 +23,7 @@
 require dial
 
 _j_is_up() {
-    nc 127.0.0.1 1012 < /dev/null > /dev/null 2>&1
+    busybox nc 127.0.0.1 1012 < /dev/null > /dev/null 2>&1
 }
 
 _j_enable() {
