@@ -67,9 +67,9 @@ has_package() {
 __nc() { 
     if empty "$1"; then
 	shift
-	nc "$@"
+	busybox nc "$@"
     else
-	nc -w "$@"
+	busybox nc -w "$@"
     fi
 }
 
